src/objects/Test_User__c.object
<CustomObject>
    <fields>
        <fullName>Case_Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Study</label>
        <referenceTo>Case_Study__c</referenceTo>
        <relationshipLabel>Test Users</relationshipLabel>
        <relationshipName>Test_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Test User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TU-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Test User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>